@@ -2854,6 +2854,20 @@ $row = $result->one;
 is($row->{key1}, 2);
 is($row->{key2}, 8);
 
+$dbi = DBIx::Custom->connect(dsn => 'dbi:SQLite:dbname=:memory:');
+$dbi->execute("create table table1 (key1 Date, key2 datetime)");
+$dbi->type_rule(
+    from => {
+        date => sub { $_[0] * 2 },
+    },
+);
+$dbi->insert({key1 => 2}, table => 'table1');
+$result = $dbi->select(table => 'table1');
+$result->filter(key1 => sub { $_[0] * 3});
+is($result->one->{key1}, 6);
+$result = $dbi->select(table => 'table1');
+$result->filter(key1 => sub { $_[0] * 3});
+is($result->fetch->[0], 6);
 
 test 'result_filter';
 $dbi = DBIx::Custom->connect($NEW_ARGS->{0});
