@@ -1,4 +1,6 @@
 0.1692
+    - removed EXPERIMENTAL DBIx::Model result_filter
+    - DBIx::Custom::Result filter override type_rule
     - added EXPERIMENTAL DBIx::Custom::Result type_rule
     - added EXPERIMENTAL available_type_name method 
     - EXPERIMENTAL type_rule_off is not passed form execute method 
